--- a/IHC projeto/footerEheader.css
+++ b/IHC projeto/footerEheader.css
@@ -17,6 +17,16 @@ body {
     height: 100%; 
 }
 
+.card {
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    margin-bottom: 50px;
+}
+
+.card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+}
+
 header {
     background-color: #004e92; 
     color: white;
